# KResearch

./: .cproject  .project  CMakeLists.txt  database.sql
src/: AuthorView.cpp  AuthorView.h  BaseView.cpp  BaseView.h  JournalView.cpp  JournalView.h  LibraryView.cpp  LibraryView.h  MainWindow.cpp  MainWindow.h  main.cpp
src/export/: CitationFormatter.cpp  CitationFormatter.h  DocumentExporter.cpp  DocumentExporter.h
src/import/: AuthorPage.ui  DocumentImportService.cpp  DocumentImportService.h  DocumentImportWizard.cpp  DocumentImportWizard.h  DocumentImportWizardAuthorPage.cpp  DocumentImportWizardAuthorPage.h  DocumentImportWizardTitlePage.cpp  DocumentImportWizardTitlePage.h  PDFImportWizard.cpp  PDFImportWizard.h  PDFImportWizardAuthorPage.cpp  PDFImportWizardAuthorPage.h  PDFImportWizardTitlePage.cpp  PDFImportWizardTitlePage.h  PublicationImportService.cpp  PublicationImportService.h  TitlePage.ui
src/import/importers/: BibtexDocumentImporter.cpp  BibtexDocumentImporter.h  BibtexParser.cpp  BibtexParser.h  DocumentImporter.cpp  DocumentImporter.h  ImportService.cpp  ImportService.h  OnlineSearchImporter.cpp  OnlineSearchImporter.h  PDFDocumentImporter.cpp  PDFDocumentImporter.h  PythonSearchImporterPlugin.cpp  PythonSearchImporterPlugin.h
src/pdfwidget/: PDFDocumentDialog.cpp  PDFDocumentDialog.h  PDFDocumentWidget.cpp  PDFDocumentWidget.h
src/sqliteLibrary/: SQLiteAuthorDAO.cpp  SQLiteAuthorDAO.h  SQLiteBaseDAO.cpp  SQLiteBaseDAO.h  SQLiteJournalDAO.cpp  SQLiteJournalDAO.h  SQLitePublicationDAO.cpp  SQLitePublicationDAO.h  SQLiteRepository.cpp  SQLiteRepository.h
src/ui/: AuthorEdit.ui  AuthorEditWidget.cpp  AuthorEditWidget.h  CollectionDockWidget.cpp  CollectionDockWidget.h  ConcealedTabWidget.cpp  ConcealedTabWidget.h  InformationDockWidget.cpp  InformationDockWidget.h  PreviewTab.cpp  PreviewTab.h  PublicationEdit.ui  PublicationEditDialog.cpp  PublicationEditDialog.h  PublicationInformation.ui
src/ui/infopanel/: AttachmentElement.cpp  AttachmentElement.h  EditableLabel.cpp  EditableLabel.h  InfoPanelDock.cpp  InfoPanelDock.h  InfoPanelElement.cpp  InfoPanelElement.h  InfoPanelElementHeader.cpp  InfoPanelElementHeader.h
src/ui/treepanel/: CollectionTree.cpp  CollectionTree.h  CollectionTreeItem.cpp  CollectionTreeItem.h  CollectionTreeModel.cpp  CollectionTreeModel.h
src/util/: NameUtils.h  SerializationUtils.h  StringUtils.h
